# ertflix-2-jellyfin.rs

./: CACHING.md  Cargo.toml  README.md
src/: config.rs  error.rs  main.rs
src/api/: ertflix_client.rs  jellyfin_server.rs  mod.rs
src/models/: ertflix.rs  jellyfin.rs  mod.rs
src/routes/: handlers.rs  mod.rs
src/services/: media_service.rs  mod.rs
