[package]
name = "ertflix-2-jellyfin"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.23", features = ["json"] }
uuid = { version = "1.18.1", features = ["v4", "v5"] }
chrono = "0.4.42"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-actix-web = "0.7"
